--- a/assets/css/blogposts.css
+++ b/assets/css/blogposts.css
@@ -5,13 +5,13 @@
 :root {
   /* --primary-colors --*/
   --white-ish:#F9F7F7;
-  --light-gray: #DBE2EF;
-  --blue-light:#669bbc;
-  --blue-medium: #0077b6;
-  --blue-dark:rgb(15, 76, 117);
-  --dark-b: #003566;
-  --gray-black: #415a77;
-  --darker-b:#1B262C;
+  --light-gray: #f0cadf;
+  --blue-light:#000000;
+  --blue-medium: #000000;
+  --blue-dark:rgb(13, 13, 13);
+  --dark-b: #f2eded;
+  --gray-black: #000000;
+  --darker-b:#dd51b5;
 
   /* https://colorhunt.co/palette/f9f7f7dbe2ef3f72af112d4e */
 }
