--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -5,14 +5,15 @@
 :root {
     /* --primary-colors --*/
     --white-ish:#F9F7F7;
-    --light-gray: #DBE2EF;
-    --blue-light:#669bbc;
-    --blue-medium: #0077b6;
-    --blue-dark:rgb(15, 76, 117);
-    --dark-b: #003566;
-    --gray-black: #415a77;
-    --darker-b:#1B262C;
-  
+    --light-gray: #f0cadf;
+    --bluish-gray: #f0e4f1;
+    --blue-light:#000000;
+    --blue-medium: #000000;
+    --blue-dark:rgb(13, 13, 13);
+    --dark-b: #f2eded;
+    --gray-black: #000000;
+    --darker-b:#dd51b5;
+    
     /* https://colorhunt.co/palette/f9f7f7dbe2ef3f72af112d4e */
   }
   
@@ -137,8 +138,8 @@ a:hover {
       height: 75px; 
       overflow: hidden;
       position: relative;
-  } */
-  /* .truncate-height p {
+  } 
+  truncate-height p {
       margin: 0;
   }
   .truncate-height:before {
@@ -149,7 +150,7 @@ a:hover {
       width: 100%;
       height: 1.5em; 
       background: linear-gradient(to bottom, transparent, var(--blue-light));
-  } */
+  }  */
   
   .responsive-text {
       font-size: 1rem; /* Base font size for extra small screens */
